--- a/Source/Mosa.Tool.GDBDebugger/Mosa.Tool.GDBDebugger.csproj
+++ b/Source/Mosa.Tool.GDBDebugger/Mosa.Tool.GDBDebugger.csproj
@@ -62,6 +62,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="StackFrameView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StackFrameView.designer.cs">
+      <DependentUpon>StackFrameView.cs</DependentUpon>
+    </Compile>
     <Compile Include="WatchEntry.cs" />
     <Compile Include="BreakPoint.cs" />
     <Compile Include="ControlView.cs">
@@ -168,6 +174,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="RegisterView.resx">
       <DependentUpon>RegisterView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StackFrameView.resx">
+      <DependentUpon>StackFrameView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="StatusView.resx">
       <DependentUpon>StatusView.cs</DependentUpon>
