--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,41 +2,78 @@ version: '1.8.{build}'
 
 configuration: Release
 platform: Any CPU
-image: Visual Studio 2017
+image:
+- Ubuntu1804
+- Visual Studio 2017
+
 shallow_clone: true
 
-install:
-#- cmd: choco install InnoSetup
-- cmd: SET PATH=%PATH%;C:\Program Files (x86)\Inno Setup 5
+build: off
 
-before_build:
-- nuget restore -Verbosity quiet Source\MOSA.sln
+for:
+  -
+    matrix:
+      only:
+        - image: Visual Studio 2017
 
-build:
-  verbosity: minimal
-  parallel: true
-  project: Source\MOSA.sln
-  publish_nuget: true
 
-after_build:
-- cmd: ISCC.exe Source\Inno-Setup-Script\Mosa-Installer.iss
+    install:
+    #- cmd: choco install InnoSetup
+    - cmd: SET PATH=%PATH%;C:\Program Files (x86)\Inno Setup 5
 
-build_script:
+    before_build:
+    - nuget restore -Verbosity quiet Source/Mosa.sln
 
-after_test:
+    build:
+      verbosity: minimal
+      parallel: true
+      project: Source/Mosa.sln
+      publish_nuget: true
 
-nuget:
-  project_feed: true
+    after_build:
+    - ps: ./mosactl.ps1 test
+    - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss
 
-test: off
+    build_script:
 
-assembly_info:
-  patch: true
-  file: AssemblyInfo.*
-  assembly_version: "{version}"
-  assembly_file_version: "{version}"
-  assembly_informational_version: "{version}"
+    test_script:
+#    - cmd: ./mosactl.ps1 test
 
-artifacts:
-- path: 'bin\MOSA Installer\MOSA-Installer.exe'
+    after_test:
 
+    nuget:
+      project_feed: true
+
+    test: off
+
+    assembly_info:
+      patch: true
+      file: AssemblyInfo.*
+      assembly_version: "{version}"
+      assembly_file_version: "{version}"
+      assembly_informational_version: "{version}"
+
+    artifacts:
+    - path: 'bin/MOSA Installer/MOSA-Installer.exe'
+
+  -
+    matrix:
+      only:
+        - image: Ubuntu1804
+
+    install:
+    - sh: docker pull seblon/mosa-docker-integration || docker pull seblon/mosa-docker-integration # with retry, if failed
+
+    before_build:
+    - echo test
+
+    build: off
+#      verbosity: minimal
+#      parallel: true
+#      project: Source/Mosa.sln
+
+    build_script:
+#    - sh: echo $APPVEYOR_BUILD_FOLDER; ls -l $APPVEYOR_BUILD_FOLDER; 
+#    - sh: echo $PWD; ls -l; ls -l $PWD ; echo blubb; ls -l $PWD/Ressources; ls -l $PWD/Ressources/docker-integration
+    - sh: echo UID "$UID"
+    - sh: docker run --name MOSA -v $APPVEYOR_BUILD_FOLDER:/home/appveyor seblon/mosa-docker-integration /bin/bash -c "useradd -m -u $UID appveyor && su appveyor -- -c 'cd /home/appveyor && chmod +x mosactl && ./mosactl test'"
