--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,7 +33,7 @@ for:
     after_build:
     - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss
     - ps: ./mosactl.ps1 unittest
-    - ps: ./mosactl.ps1 test
+#    - ps: ./mosactl.ps1 test
 
     build_script:
 
