--- a/Source/Mosa.DeviceSystem/Mosa.DeviceSystem.csproj
+++ b/Source/Mosa.DeviceSystem/Mosa.DeviceSystem.csproj
@@ -72,6 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseDeviceConfiguration.cs" />
+    <Compile Include="PCIDeviceService.cs" />
     <Compile Include="ServiceEventType.cs" />
     <Compile Include="ServiceEvent.cs" />
     <Compile Include="BaseService.cs" />
