--- a/Source/Mosa.Korlib/Mosa.Korlib.csproj
+++ b/Source/Mosa.Korlib/Mosa.Korlib.csproj
@@ -116,6 +116,7 @@
     <Compile Include="System.Threading\Monitor.cs" />
     <Compile Include="System.Threading\Thread.cs" />
     <Compile Include="System.Threading\SpinLock.cs" />
+    <Compile Include="System\FormatException.cs" />
     <Compile Include="System\ObsoleteAttribute.cs" />
     <Compile Include="System\DivideByZeroException.cs" />
     <Compile Include="System\ArithmeticException.cs" />
