--- a/Source/Mosa.Workspace.Experiment.Debug/.mosa-global.yml
+++ b/Source/Mosa.Workspace.Experiment.Debug/.mosa-global.yml
@@ -7,7 +7,7 @@ Compiler:
     EnableStatistics : false
     TraceLevel: 0
     EnableMethodScanner: false # experimental option
-    EmitInlinedMethods: false
+    EmitInline: false
     #OutputFile
 
 SearchPaths:
@@ -32,7 +32,7 @@ Optimizations:
     InlineMethods: true
     InlineMaximum: 12
     InlineAggressiveMaximum: 24
-    InlineOnlyExplicit: true
+    InlineExplicitOnly: true
     TwoPass: false
 
 X86:
